CSDEV/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>HAE Customer Service%3A Service Request</fullName>
        <description>HAE: Customer Service: Service Request</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Customer</fullName>
        </values>
        <values>
            <fullName>Pending Internal</fullName>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HAE Support Process Customer Service%3A Claims</fullName>
        <description>HAE: Support Process for Customer Service:Claims</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Customer</fullName>
        </values>
        <values>
            <fullName>Pending Internal</fullName>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HAE Support Process Customer Service%3A Contract Request</fullName>
        <description>HAE: Support Process for Customer Service: Contract Request</description>
        <isActive>true</isActive>
        <values>
            <fullName>Additional Complaint Investigation</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Complaint Investigation</fullName>
        </values>
        <values>
            <fullName>Complete Complaint Documentation</fullName>
        </values>
        <values>
            <fullName>Completed in Salesforce</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Evaluate</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Jira Submission</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>PCCB Action</fullName>
        </values>
        <values>
            <fullName>Pending Customer</fullName>
        </values>
        <values>
            <fullName>Pending Internal</fullName>
        </values>
        <values>
            <fullName>Reopened</fullName>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HAE Support Process Customer Service%3A GHX</fullName>
        <description>HAE: Support Process for Customer Service: GHX</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Customer</fullName>
        </values>
        <values>
            <fullName>Pending Internal</fullName>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HAE Support Process Customer Service%3A Inquiry</fullName>
        <description>HAE: Support Process for Customer Service: Inquiry</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Customer</fullName>
        </values>
        <values>
            <fullName>Pending Internal</fullName>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HAE Support Process Customer Service%3A Order</fullName>
        <description>HAE: Support Process for Customer Service: Order</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Customer</fullName>
        </values>
        <values>
            <fullName>Pending Internal</fullName>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Case_Business_Unit__c</fullName>
        <description>Patient - TEG
Patient - Cell Salvage
Donor - Non-Pall Related
Donor - Pall
Plasma</description>
        <label>Case Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Patient - TEG</fullName>
                </value>
                <value>
                    <fullName>Patient - Cell Salvage</fullName>
                </value>
                <value>
                    <fullName>Donor - Non-Pall Related</fullName>
                </value>
                <value>
                    <fullName>Donor - Pall</fullName>
                </value>
                <value>
                    <fullName>Plasma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>HAE:</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Request</fullName>
                </value>
                <value>
                    <fullName>Damaged Product</fullName>
                </value>
                <value>
                    <fullName>Device Replacement</fullName>
                </value>
                <value>
                    <fullName>Incorrect Address</fullName>
                </value>
                <value>
                    <fullName>Missing Paperwork</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partial Shipment</fullName>
                </value>
                <value>
                    <fullName>Pricing Issue</fullName>
                </value>
                <value>
                    <fullName>Product Incident Report (PIR)</fullName>
                </value>
                <value>
                    <fullName>Quantity Error</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Return Request</fullName>
                </value>
                <value>
                    <fullName>Returns Received</fullName>
                </value>
                <value>
                    <fullName>Wrong Lot Number</fullName>
                </value>
                <value>
                    <fullName>Wrong Part Number</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Declarations of exclusivity &amp; Certificates</fullName>
                </value>
                <value>
                    <fullName>General Communication</fullName>
                </value>
                <value>
                    <fullName>Invoice Request</fullName>
                </value>
                <value>
                    <fullName>ISO Certificates</fullName>
                </value>
                <value>
                    <fullName>Master Data Request</fullName>
                </value>
                <value>
                    <fullName>New Customer Request</fullName>
                </value>
                <value>
                    <fullName>Order Status</fullName>
                </value>
                <value>
                    <fullName>Pricing Request</fullName>
                </value>
                <value>
                    <fullName>Product Availability</fullName>
                </value>
                <value>
                    <fullName>Product Certificate</fullName>
                </value>
                <value>
                    <fullName>Quality Hold</fullName>
                </value>
                <value>
                    <fullName>RateShop Error</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Request for Documents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Debug_Field__c</fullName>
        <label>Debug Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HAE_3rd_Party_Involved__c</fullName>
        <description>HAE:</description>
        <label>3rd Party Involved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fedex</fullName>
                </value>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>Averitt</fullName>
                </value>
                <value>
                    <fullName>ODFL</fullName>
                </value>
                <value>
                    <fullName>DACHSER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Account_Notes__c</fullName>
        <description>HAE: This field is used to track the notes associated with the account.</description>
        <label>Account Notes</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HAE_Actual_Delivery_Address__c</fullName>
        <description>HAE: This field denotes the actual Delivery Address</description>
        <label>Actual Delivery Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Additional_Information__c</fullName>
        <description>HAE:</description>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Address_Delivered_To__c</fullName>
        <description>HAE:</description>
        <label>Address Delivered To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Agent__c</fullName>
        <description>HAE: It will display the Case Owner.</description>
        <formula>IF(Owner:Queue.QueueName != null,HYPERLINK(&apos;/lightning/setup/Queues/page?address=%2Fp%2Fown%2FQueue%2Fd%3Fid%3D&apos;+OwnerId,Owner:Queue.QueueName,&apos;_blank&apos;),HYPERLINK(&apos;/&apos;&amp;OwnerId,(Owner:User.FirstName+&apos; &apos;+Owner:User.LastName),&apos;_blank&apos;))</formula>
        <label>Agent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Audit_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audit Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAE_Bill_To_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>HAE: This field refers to the associated account.</description>
        <label>Bill To Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Transactional_Account</value>
            </filterItems>
            <filterItems>
                <field>Account.Bill_To_Ship_To_SFDC__c</field>
                <operation>equals</operation>
                <value>Bill To</value>
            </filterItems>
            <filterItems>
                <field>$Source.HAE_Operating_Unit__c</field>
                <operation>equals</operation>
                <valueField>Account.HAE_Operating_Unit__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (CS Customer Name)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HAE_Bill_To_Address__c</fullName>
        <description>HAE: This field is refers to the billing address of CS Customer Account.</description>
        <formula>if(LEN(HAE_Bill_To_Account__r.BillingStreet)&gt;0, HAE_Bill_To_Account__r.BillingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(HAE_Bill_To_Account__r.BillingCity)&gt;0, HAE_Bill_To_Account__r.BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(HAE_Bill_To_Account__r.BillingState)&gt;0, HAE_Bill_To_Account__r.BillingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(HAE_Bill_To_Account__r.BillingPostalCode)&gt;0, HAE_Bill_To_Account__r.BillingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN(HAE_Bill_To_Account__r.BillingCountry) &gt;0, HAE_Bill_To_Account__r.BillingCountry,&quot;&quot;)</formula>
        <label>Bill To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Case_Currency__c</fullName>
        <description>HAE</description>
        <label>Case Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Case_Group__c</fullName>
        <description>HAE: This field denotes the Case group owning the case.</description>
        <label>Case Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TS ANZ</fullName>
                </value>
                <value>
                    <fullName>CS Plasma NA</fullName>
                </value>
                <value>
                    <fullName>CS NA</fullName>
                </value>
                <value>
                    <fullName>CS Orders NA</fullName>
                </value>
                <value>
                    <fullName>CS GHXNA</fullName>
                </value>
                <value>
                    <fullName>CS UK</fullName>
                </value>
                <value>
                    <fullName>CS CZ</fullName>
                </value>
                <value>
                    <fullName>CS HUCZ</fullName>
                </value>
                <value>
                    <fullName>CS FR</fullName>
                </value>
                <value>
                    <fullName>CS CH</fullName>
                </value>
                <value>
                    <fullName>CS IT</fullName>
                </value>
                <value>
                    <fullName>CS DE</fullName>
                </value>
                <value>
                    <fullName>CS BE</fullName>
                </value>
                <value>
                    <fullName>CS AT</fullName>
                </value>
                <value>
                    <fullName>CS NL</fullName>
                </value>
                <value>
                    <fullName>TS UK</fullName>
                </value>
                <value>
                    <fullName>TS CZ</fullName>
                </value>
                <value>
                    <fullName>TS FR</fullName>
                </value>
                <value>
                    <fullName>TS CH</fullName>
                </value>
                <value>
                    <fullName>TS IT</fullName>
                </value>
                <value>
                    <fullName>TS DE</fullName>
                </value>
                <value>
                    <fullName>TS AT</fullName>
                </value>
                <value>
                    <fullName>TS NL</fullName>
                </value>
                <value>
                    <fullName>TS BE</fullName>
                </value>
                <value>
                    <fullName>TS DACHCZ</fullName>
                </value>
                <value>
                    <fullName>CS ANZ</fullName>
                </value>
                <value>
                    <fullName>CS GHXEU</fullName>
                </value>
                <value>
                    <fullName>Software Support</fullName>
                </value>
                <value>
                    <fullName>Product Support</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Case_RecordType_Developer_Name__c</fullName>
        <description>HAE: only contains the Case RecordType Developer Name.</description>
        <label>Case RecordType Developer Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HAE_Customer_Service_Claims</fullName>
                </value>
                <value>
                    <fullName>HAE_Customer_Service_Contract_Request</fullName>
                </value>
                <value>
                    <fullName>HAE_Customer_Service_GHX</fullName>
                </value>
                <value>
                    <fullName>HAE_Customer_Service_Inquiry</fullName>
                </value>
                <value>
                    <fullName>HAE_Customer_Service_Order</fullName>
                </value>
                <value>
                    <fullName>HAE_Customer_Service_Service_Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Case_Record_Type__c</fullName>
        <description>HAE: This field is display the record type name.</description>
        <formula>RecordType.Name</formula>
        <label>Case Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Contract_Hours__c</fullName>
        <description>HAE:</description>
        <label>Contract Hours</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>HAE_Contract_Notes__c</fullName>
        <description>HAE: This field is used to track the Contract Notes.</description>
        <label>Contract Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HAE_Contract_Request_Account_Address__c</fullName>
        <description>HAE:</description>
        <label>Account Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Contract_Request_Customer_Number__c</fullName>
        <description>HAE:</description>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Contract_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HAE: This field is used to track the Contract Request for the current case.</description>
        <label>Contract Request</label>
        <referenceTo>Contract_Request__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HAE_Contract_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases_Contract_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HAE_Correction_Type__c</fullName>
        <description>HAE: This field denotes all the corrections.</description>
        <label>Correction  Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Customer_Number__c</fullName>
        <description>HAE: This field refers to the Customer Number of the related Account.</description>
        <formula>Bill_To_Account__r.Customer_Number_SFDC__c</formula>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Delivery_Number__c</fullName>
        <label>Delivery Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Document_Type__c</fullName>
        <description>HAE:</description>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_ETA__c</fullName>
        <description>HAE:</description>
        <label>ETA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HAE_Entered_Reason__c</fullName>
        <description>HAE:This field is responsible for entering reasons.</description>
        <label>Entered Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Error_Reason__c</fullName>
        <description>HAE: This picklist denotes all the reasons for errors.</description>
        <label>Error Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BSA Line Error</fullName>
                </value>
                <value>
                    <fullName>Checked PO Error</fullName>
                </value>
                <value>
                    <fullName>Contact Errors</fullName>
                </value>
                <value>
                    <fullName>Drop Ship</fullName>
                </value>
                <value>
                    <fullName>Duplicate GHX Order</fullName>
                </value>
                <value>
                    <fullName>Duplicate PO</fullName>
                </value>
                <value>
                    <fullName>Haemonetics Fax Number</fullName>
                </value>
                <value>
                    <fullName>Invalid Each Qty</fullName>
                </value>
                <value>
                    <fullName>Invalid Rush Order</fullName>
                </value>
                <value>
                    <fullName>Mixed Contract Terms</fullName>
                </value>
                <value>
                    <fullName>Malformed XML</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Expected_Delivery_Address__c</fullName>
        <description>HAE: This field denotes the expected delivery address</description>
        <label>Expected Delivery Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Feedback__c</fullName>
        <description>HAE: Long Text Field to capture feedback.</description>
        <label>Feedback</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HAE_First_Time_Case_Queue_Owner__c</fullName>
        <description>HAE: This field is only responsible to hold the Queue Owner Name while Case is created first time. Owner change is not stored here. This a used as a flag of owner queue.</description>
        <label>First Time Case Queue Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Freight_Forwarders__c</fullName>
        <description>HAE: Freight Details in case department is Freight Forwarders</description>
        <label>Freight Forwarders</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HAE_Team__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>DACHSER</fullName>
                </value>
                <value>
                    <fullName>FEDEX</fullName>
                </value>
                <value>
                    <fullName>Averitt</fullName>
                </value>
                <value>
                    <fullName>ODFL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Function__c</fullName>
        <description>HAE: This field is used to track Customer Service or Technical Service.</description>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Technical Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_G_Fax_Kick_out_Reason__c</fullName>
        <description>HAE:</description>
        <label>G-Fax Kick-out Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account List Reject</fullName>
                </value>
                <value>
                    <fullName>Bill-To Address Mismatch</fullName>
                </value>
                <value>
                    <fullName>Bill-To Address Not Found On The Fax</fullName>
                </value>
                <value>
                    <fullName>Business Rule Reject</fullName>
                </value>
                <value>
                    <fullName>Contains CC</fullName>
                </value>
                <value>
                    <fullName>Incomplete Fax</fullName>
                </value>
                <value>
                    <fullName>Keyword Reject</fullName>
                </value>
                <value>
                    <fullName>Mismatchsacct</fullName>
                </value>
                <value>
                    <fullName>Multiple Account Numbers For This Address</fullName>
                </value>
                <value>
                    <fullName>Non Order</fullName>
                </value>
                <value>
                    <fullName>Ship-To Address Mismatch</fullName>
                </value>
                <value>
                    <fullName>Ship-To Address Not Found On The Fax</fullName>
                </value>
                <value>
                    <fullName>Ship-To Zip Code Not Found In Account List</fullName>
                </value>
                <value>
                    <fullName>Unable To Determine Part Number</fullName>
                </value>
                <value>
                    <fullName>Unable To Determine PO Number</fullName>
                </value>
                <value>
                    <fullName>Unable To Determine Ship To Account Number</fullName>
                </value>
                <value>
                    <fullName>Unclear Fax Details</fullName>
                </value>
                <value>
                    <fullName>Unreadable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Hold_Reason__c</fullName>
        <description>HAE:</description>
        <label>Hold Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Incident_Date__c</fullName>
        <description>HAE Date of Incident</description>
        <label>Incident Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HAE_Invoice_Number__c</fullName>
        <description>HAE: This field denotes the Invoice Number</description>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Is_Case_Transferred_From_Here__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HAE: This field check is any case transferred from this parent case based on internal team selection.</description>
        <label>Is Case Transferred From Here</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAE_Is_Conflict_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HAE: This field is responsible to check if there is already an existing Case available for the same contact of same account.</description>
        <label>Is Conflict Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAE_Is_Transferred_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HAE: This field is responsible to check if any new case is created or Transferred, based on any Case closed.</description>
        <label>Is Transferred Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAE_Issue__c</fullName>
        <description>HAE: This field is used to track the type of issue related to the case.</description>
        <label>Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Knowledge Gap</fullName>
                </value>
                <value>
                    <fullName>Agent Oversight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Item__c</fullName>
        <description>HAE:</description>
        <label>Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Kickout_Reason__c</fullName>
        <description>HAE: to enter reason for rejected GHX cases.</description>
        <label>Kickout Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Lot_Number_Expected__c</fullName>
        <description>HAE:</description>
        <label>Lot Number Expected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Lot_Number_Received__c</fullName>
        <description>HAE:</description>
        <label>Lot Number Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Lot_Number__c</fullName>
        <description>HAE:</description>
        <label>Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Name_of_Auditor__c</fullName>
        <description>HAE: This field is used to track the name of auditor.</description>
        <label>Name of Auditor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shefali</fullName>
                </value>
                <value>
                    <fullName>Nishant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Notes_to_Customer_Service__c</fullName>
        <description>HAE:</description>
        <label>Notes to Customer Service</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HAE_Operating_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HAE: It describes the Operating Unit belongs to the particular user.</description>
        <label>Operating Unit</label>
        <referenceTo>HAE_Operating_Unit__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HAE_Order_Number__c</fullName>
        <description>HAE:</description>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_PO_Number__c</fullName>
        <description>HAE: PO number text field</description>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Part_Number_Ordered__c</fullName>
        <description>HAE:</description>
        <label>Part Number Ordered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Part_Number_Received__c</fullName>
        <description>HAE:</description>
        <label>Part Number Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>